[package]
name = "cust-cra"
version = "0.1.0"
authors = ["baremaximum <therealcharlesdesbiens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
clap = {version = "2.33.3", features = ["yaml", "suggestions", "color"]}